--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -10,16 +10,16 @@ on:
     - cron:  15 3 * * MON
 env:
   LANGUAGE: graalvm
+  REPOSITORY: metio/devcontainers
 jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
       id-token: write
     strategy:
       matrix:
-        version: [11, 17, latest]
+        version: ["11", "17", "latest"]
     steps:
       - id: checkout
         name: Checkout Code
@@ -33,13 +33,12 @@ jobs:
       - id: buildx
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - id: login
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+      - id: dockerhub_login
+        name: Login to Dockerhub
+        uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - id: timestamp
         name: Create Timestamp
         run: echo "::set-output name=date::$(date --rfc-3339=seconds)"
@@ -51,7 +50,7 @@ jobs:
           context: ./languages/${{ env.LANGUAGE }}/${{ matrix.version }}/
           file: ./languages/${{ env.LANGUAGE }}/${{ matrix.version }}/Containerfile
           push: true
-          tags: ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ matrix.version }}
+          tags: docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:${{ matrix.version }}
           labels: |
             org.opencontainers.image.title=${{ env.LANGUAGE }}
             org.opencontainers.image.description=Image for ${{ env.LANGUAGE }} development
@@ -63,11 +62,11 @@ jobs:
             org.opencontainers.image.version=${{ matrix.version }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.created=${{ steps.timestamp.outputs.date }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=registry,ref=${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:buildcache
+          cache-to: type=registry,ref=${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:buildcache,mode=max
       - id: sign
         name: Sign Image
-        run: cosign sign ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ matrix.version }}
+        run: cosign sign docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }}
         env:
           COSIGN_EXPERIMENTAL: "true"
       - id: sbom
@@ -75,5 +74,14 @@ jobs:
         env:
           COSIGN_EXPERIMENTAL: "true"
         run: |
-          syft ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ matrix.version }} -o spdx-json=sbom-spdx.json
-          cosign attest --predicate sbom-spdx.json --type spdx ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ matrix.version }}
+          syft docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }} -o spdx-json=sbom-spdx.json
+          cosign attest --predicate sbom-spdx.json --type spdx docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }}
+      - id: documentation
+        name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{ env.REPOSITORY }}-${{ env.LANGUAGE }}
+          short-description: Devcontainer for GraalVM with JDT LS
+          readme-filepath: ./languages/${{ env.LANGUAGE }}/README.md
