--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -1,23 +1,25 @@
-name: Ruby (latest)
+name: Ruby
 on:
   push:
     branches:
       - main
     paths:
       - .github/workflows/ruby.yml
-      - languages/ruby/latest/**
+      - languages/ruby/**
   schedule:
     - cron:  15 3 * * MON
 env:
   LANGUAGE: ruby
-  VERSION: latest
+  REPOSITORY: metio/devcontainers
 jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write
       id-token: write
+    strategy:
+      matrix:
+        version: ["latest"]
     steps:
       - id: checkout
         name: Checkout Code
@@ -31,13 +33,12 @@ jobs:
       - id: buildx
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      - id: login
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+      - id: dockerhub_login
+        name: Login to Dockerhub
+        uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - id: timestamp
         name: Create Timestamp
         run: echo "::set-output name=date::$(date --rfc-3339=seconds)"
@@ -46,10 +47,10 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          context: ./languages/${{ env.LANGUAGE }}/${{ env.VERSION }}/
-          file: ./languages/${{ env.LANGUAGE }}/${{ env.VERSION }}/Containerfile
+          context: ./languages/${{ env.LANGUAGE }}/${{ matrix.version }}/
+          file: ./languages/${{ env.LANGUAGE }}/${{ matrix.version }}/Containerfile
           push: true
-          tags: ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ env.VERSION }}
+          tags: docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:${{ matrix.version }}
           labels: |
             org.opencontainers.image.title=${{ env.LANGUAGE }}
             org.opencontainers.image.description=Image for ${{ env.LANGUAGE }} development
@@ -57,15 +58,15 @@ jobs:
             org.opencontainers.image.vendor=metio.wtf
             org.opencontainers.image.url=https://github.com/${{ github.repository }}
             org.opencontainers.image.documentation=https://github.com/${{ github.repository }}
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}/languages/${{ env.LANGUAGE }}/${{ env.VERSION }}
-            org.opencontainers.image.version=${{ env.VERSION }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}/languages/${{ env.LANGUAGE }}/${{ matrix.version }}
+            org.opencontainers.image.version=${{ matrix.version }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.created=${{ steps.timestamp.outputs.date }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=registry,ref=${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:buildcache
+          cache-to: type=registry,ref=${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:buildcache,mode=max
       - id: sign
         name: Sign Image
-        run: cosign sign ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ env.VERSION }}
+        run: cosign sign docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }}
         env:
           COSIGN_EXPERIMENTAL: "true"
       - id: sbom
@@ -73,5 +74,14 @@ jobs:
         env:
           COSIGN_EXPERIMENTAL: "true"
         run: |
-          syft ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ matrix.version }} -o spdx-json=sbom-spdx.json
-          cosign attest --predicate sbom-spdx.json --type spdx ghcr.io/metio/devcontainers/${{ env.LANGUAGE }}:${{ matrix.version }}
+          syft docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }} -o spdx-json=sbom-spdx.json
+          cosign attest --predicate sbom-spdx.json --type spdx docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }}
+      - id: documentation
+        name: Docker Hub Description
+        uses: peter-evans/dockerhub-description@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: ${{ env.REPOSITORY }}-${{ env.LANGUAGE }}
+          short-description: Devcontainer for Ruby with Ruby Language Server
+          readme-filepath: ./languages/${{ env.LANGUAGE }}/README.md
