--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -17,6 +17,7 @@ jobs:
     permissions:
       contents: read
       id-token: write
+      security-events: write
     strategy:
       matrix:
         version: ["latest"]
@@ -85,3 +86,15 @@ jobs:
           repository: ${{ env.REPOSITORY }}-${{ env.LANGUAGE }}
           short-description: Devcontainer for Crystal with Crystalline
           readme-filepath: ./languages/${{ env.LANGUAGE }}/README.md
+      - id: scan
+        uses: anchore/scan-action@v3
+        with:
+          sbom: sbom-spdx.json
+          acs-report-enable: true
+          fail-build: false
+      - id: sarif
+        name: upload Anchore scan SARIF report
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
+          category: ${{ env.LANGUAGE }}-${{ matrix.version }}
