--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -16,6 +16,9 @@ jobs:
       matrix:
         version: ["latest"]
     steps:
+      - id: checkout
+        name: Checkout Code
+        uses: actions/checkout@v3
       - uses: ./.github/workflows/publish-image.yml
         with:
           language: crystal
