--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -10,17 +10,9 @@ on:
   schedule:
     - cron:  25 3 * * MON
 jobs:
-  publish:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        version: ["latest"]
-    steps:
-      - id: checkout
-        name: Checkout Code
-        uses: actions/checkout@v3
-      - uses: ./.github/workflows/publish-image.yml
-        with:
-          language: crystal
-          version: ${{ matrix.version }}
-          description: Devcontainer for Crystal with Crystalline
+  latest:
+    uses: ./.github/workflows/publish-image.yml
+    with:
+      language: crystal
+      version: latest
+      description: Devcontainer for Crystal with Crystalline
