--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -9,10 +9,19 @@ on:
       - languages/crystal/**
   schedule:
     - cron:  25 3 * * MON
+env:
+  LANGUAGE: crystal
+  DESCRIPTION: Devcontainer for Crystal with Crystalline
+permissions:
+  contents: write
+  id-token: write
+  security-events: write
 jobs:
   latest:
     uses: ./.github/workflows/publish-image.yml
     with:
-      language: crystal
       version: latest
-      description: Devcontainer for Crystal with Crystalline
+      language: ${{ env.LANGUAGE }}
+      description: ${{ env.DESCRIPTION }}
+      registry_username: ${{ secrets.DOCKER_USERNAME }}
+      registry_password: ${{ secrets.DOCKER_PASSWORD }}
