--- a/.github/workflows/publish-image.yml
+++ b/.github/workflows/publish-image.yml
@@ -3,24 +3,40 @@ on:
   workflow_call:
     inputs:
       language:
-        required: true
         type: string
+        description: The programming language of the devcontainer
+        required: true
       version:
-        required: true
         type: string
+        description: The version of the devcontainer
+        required: true
       description:
-        required: true
         type: string
-env:
-  REPOSITORY: metio/devcontainers
-  LICENSE: CC0-1.0
+        description: The short description for dockerhub
+        required: true
+      repository:
+        type: string
+        description: The dockerhub repository to use
+        default: metio/devcontainers
+        required: false
+      license:
+        type: string
+        description: The license of the container
+        default: CC0-1.0
+        required: false
+      vendor:
+        type: string
+        description: The vendor of the container
+        default: metio.wtf
+        required: false
+    secrets:
+      registry_username:
+        required: true
+      registry_password:
+        required: true
 jobs:
   publish:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      id-token: write
-      security-events: write
     steps:
       - id: checkout
         name: Checkout Code
@@ -41,8 +57,8 @@ jobs:
         name: Login to Dockerhub
         uses: docker/login-action@v1
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.registry_username }}
+          password: ${{ secrets.registry_password }}
       - id: timestamp
         name: Create Timestamp
         run: echo "::set-output name=date::$(date --rfc-3339=seconds)"
@@ -51,38 +67,38 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           builder: ${{ steps.buildx.outputs.name }}
-          context: ./languages/${{ env.LANGUAGE }}/${{ inputs.version }}/
-          file: ./languages/${{ env.LANGUAGE }}/${{ inputs.version }}/Containerfile
+          context: ./languages/${{ inputs.language }}/${{ inputs.version }}/
+          file: ./languages/${{ inputs.language }}/${{ inputs.version }}/Containerfile
           push: true
-          tags: docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:${{ inputs.version }}
+          tags: docker.io/${{ inputs.repository }}-${{ inputs.language }}:${{ inputs.version }}
           labels: |
-            org.opencontainers.image.title=${{ env.LANGUAGE }}
-            org.opencontainers.image.description=Image for ${{ env.LANGUAGE }} development
-            org.opencontainers.image.licenses=${{ env.LICENSE }}
-            org.opencontainers.image.vendor=metio.wtf
+            org.opencontainers.image.title=${{ inputs.language }}
+            org.opencontainers.image.description=Image for ${{ inputs.language }} development
+            org.opencontainers.image.licenses=${{ inputs.license }}
+            org.opencontainers.image.vendor=${{ inputs.vendor }}
             org.opencontainers.image.url=https://github.com/${{ github.repository }}
             org.opencontainers.image.documentation=https://github.com/${{ github.repository }}
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}/languages/${{ env.LANGUAGE }}/${{ inputs.version }}
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}/languages/${{ inputs.language }}/${{ inputs.version }}
             org.opencontainers.image.version=${{ inputs.version }}
             org.opencontainers.image.revision=${{ github.sha }}
             org.opencontainers.image.created=${{ steps.timestamp.outputs.date }}
-          cache-from: type=registry,ref=${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:buildcache
-          cache-to: type=registry,ref=${{ env.REPOSITORY }}-${{ env.LANGUAGE }}:buildcache,mode=max
+          cache-from: type=registry,ref=${{ inputs.repository }}-${{ inputs.language }}:buildcache
+          cache-to: type=registry,ref=${{ inputs.repository }}-${{ inputs.language }}:buildcache,mode=max
       - id: sign
         name: Sign Image
-        run: cosign sign docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }}
+        run: cosign sign docker.io/${{ inputs.repository }}-${{ inputs.language }}@${{ steps.publish.outputs.digest }}
         env:
           COSIGN_EXPERIMENTAL: "true"
       - id: sbom
         name: Generate SBOM
-        run: syft docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }} -o spdx-json=sbom-spdx.json
+        run: syft docker.io/${{ inputs.repository }}-${{ inputs.language }}@${{ steps.publish.outputs.digest }} -o spdx-json=sbom-spdx.json
       - id: sbom-attest
         name: Attest SBOM
         run: |
           cosign attest \
             --predicate sbom-spdx.json \
             --type spdx \
-            docker.io/${{ env.REPOSITORY }}-${{ env.LANGUAGE }}@${{ steps.publish.outputs.digest }}
+            docker.io/${{ inputs.repository }}-${{ inputs.language }}@${{ steps.publish.outputs.digest }}
         env:
           COSIGN_EXPERIMENTAL: "true"
       - id: grype-scan
@@ -92,7 +108,7 @@ jobs:
         name: Scan Containerfile with Hadolint
         uses: hadolint/hadolint-action@v2.1.0
         with:
-          dockerfile: ./languages/${{ env.LANGUAGE }}/${{ inputs.version }}/Containerfile
+          dockerfile: ./languages/${{ inputs.language }}/${{ inputs.version }}/Containerfile
           format: sarif
           output-file: hadolint.sarif
           no-fail: true
@@ -101,19 +117,19 @@ jobs:
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: grype.sarif
-          category: grype-${{ env.LANGUAGE }}-${{ inputs.version }}
+          category: grype-${{ inputs.language }}-${{ inputs.version }}
       - id: hadolint-upload
         name: Upload Hadolint SARIF Report
         uses: github/codeql-action/upload-sarif@v2
         with:
           sarif_file: hadolint.sarif
-          category: hadolint-${{ env.LANGUAGE }}-${{ inputs.version }}
+          category: hadolint-${{ inputs.language }}-${{ inputs.version }}
       - id: documentation
         name: Docker Hub Description
         uses: peter-evans/dockerhub-description@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ env.REPOSITORY }}-${{ env.LANGUAGE }}
+          username: ${{ secrets.registry_username }}
+          password: ${{ secrets.registry_password }}
+          repository: ${{ inputs.repository }}-${{ inputs.language }}
           short-description: ${{ inputs.description }}
-          readme-filepath: ./languages/${{ env.LANGUAGE }}/README.md
+          readme-filepath: ./languages/${{ inputs.language }}/README.md
