--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -9,12 +9,15 @@ on:
       - languages/crystal/**
   schedule:
     - cron:  25 3 * * MON
-permissions:
-  contents: write
-  id-token: write
-  security-events: write
+env:
+  LANGUAGE: crystal
+  DESCRIPTION: Devcontainer for Crystal with Crystalline
 jobs:
   latest:
+    permissions:
+      contents: write
+      id-token: write
+      security-events: write
     uses: ./.github/workflows/publish-image.yml
     with:
       version: latest
