--- a/.github/workflows/crystal.yml
+++ b/.github/workflows/crystal.yml
@@ -14,14 +14,11 @@ env:
   DESCRIPTION: Devcontainer for Crystal with Crystalline
 jobs:
   latest:
-    permissions:
-      contents: write
-      id-token: write
-      security-events: write
     uses: ./.github/workflows/publish-image.yml
     with:
       version: latest
       language: crystal
       description: Devcontainer for Crystal with Crystalline
+    secrets:
       registry_username: ${{ secrets.DOCKER_USERNAME }}
       registry_password: ${{ secrets.DOCKER_PASSWORD }}
